prevent nav from overflowing mobile body size

--- a/static/styles.css
+++ b/static/styles.css
@@ -250,6 +250,12 @@ li a:hover, li.active a {
   #hero-wrapper {
     height: 500px;
   }
+  #nav ul {
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    left: 0;
+  }
   #links {
     width: 100%;
     padding: 10px 0;
